--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
   <h1> Shelby M. Coffey </h1>
+  <link rel="stylesheet" href="stylesheet.ccs"/>
   <a href= "https://ShelbyCoffey.com" target= "_blank"> ShelbyCoffey.com </a>
-   <a href="https://resumephoto.com" target="_blank"> <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t31.0-8/15732542_1269119536478567_8783348084532113833_o.jpg?oh=b8d74d8bd5f6469b40a92f5c3467626c&oe=59FF840F" alt= "Shelby Coffey"/></a>
+ 
  <h2> WORK EXPERIENCE </h2>
   <ul>
     <li>Caribou Coffee, Eagan, MN  Shift Supervisor
