--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1> Shelby M. Coffey </h1>
-  <link rel="stylesheet" href="stylesheet.ccs"/>
+  <link rel="stylesheet" href="stylesheet.css"/>
   <a href= "https://ShelbyCoffey.com" target= "_blank"> ShelbyCoffey.com </a>
  
  <h2> WORK EXPERIENCE </h2>
