--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 </head>
 <body>
   <h1> Shelby M. Coffey </h1>
+  <h3> 
+3154 69th St. E. Inver Grove, MN 55076
+(651)-280-5449
+    ShelbyMarieCoffey13@gmail.com </h3>
+
  
   <a href= "https://ShelbyCoffey.com" target= "_blank"> ShelbyCoffey.com </a>
  
