--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
+ <head>
   <title>Shelby M. Coffey</title>
-</head>
+ </head>
 <body>
-  <h1> Shelby M. Coffey </h1>
-  <h3> 
-3154 69th St. E. Inver Grove, MN 55076
-(651)-280-5449
-    ShelbyMarieCoffey13@gmail.com </h3>
+  <h1 style="font-size: 50px"> Shelby M. Coffey </h1>
+  <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
- 
-  <a href= "https://ShelbyCoffey.com" target= "_blank"> ShelbyCoffey.com </a>
+<a href= "https://ShelbyCoffey.com" target= "_blank"> ShelbyCoffey.com </a>
  
  <h2> WORK EXPERIENCE </h2>
   <ul>
     <li>Caribou Coffee, Eagan, MN  Shift Supervisor
 2013 - PRESENT</li>
-<li>Minnesota Destination Imagination, Plymouth, MN  State Challenge Master
+    <li>Minnesota Destination Imagination, Plymouth, MN  State Challenge Master
 December 2015 -Present</li>
-<li>Minnesota Destination Imagination, Plymouth, MN  Improv Trainer
+    <li>Minnesota Destination Imagination, Plymouth, MN  Improv Trainer
 May 2012 -Present</li>
-<li>DSW, Bloomington, MN  Sales Associate
+    <li>DSW, Bloomington, MN  Sales Associate
 January 2015 - September 2015</li>
-<li>Color Me Mine, Eagan, MN  Sales Associate/ Traveling Sales Associate
+    <li>Color Me Mine, Eagan, MN  Sales Associate/ Traveling Sales Associate
 May 2013 - September 2013</li>
 </ul>
 
  <h2> EDUCATION </h2>
 
  <ul>
-   <li> <h3>School of Visual Arts, New York City — Fine Arts</h3>
+    <li> <h3>School of Visual Arts, New York City — Fine Arts</h3>
 August 2014 - December 2014
 One semester studying Fine Arts with a concentration in Painting/drawing.
-</li>
-  <li> <h3>Minneapolis College of Art and Design, Minneapolis, MN — Fine arts and Furniture Design</h3>
+   </li>
+   <li> <h3>Minneapolis College of Art and Design, Minneapolis, MN — Fine arts and Furniture Design</h3>
 August 2015 - Present
 Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Design in progress.</li>
 </ul>
-<h2>VOLUNTEER POSITIONS</h2
+ <h2>VOLUNTEER POSITIONS</h2
 <ul>
-<li><h3>Minnesota Destination Imagination, Plymouth, MN — Secretary of the Board</h3>
+  <li><h3>Minnesota Destination Imagination, Plymouth, MN — Secretary of the Board</h3>
 2012-Present</li>
-
  </ul>
+  
   <h2> AWARDS </h2> 
-  <ul> <li> <h3>Distinguished Leader Award Awarded by Minnesota Destination</h3></li>
-  <li><h3>Spirit of D.I. Award</h3>
+ 
+  <ul> 
+    <li> <h3>Distinguished Leader Award Awarded by Minnesota Destination</h3></li>
+    <li><h3>Spirit of D.I. Award</h3>
   Awarded by Minnesota Destination Imagination for extraordinary commitment to the program.</li>
-
   </ul>
  
   <link rel="stylesheet" href="stylesheet.css"/> 
