--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>Shelby M. Coffey</title>
  </head>
 <body>
-  <h1 style="font-size: 50px"> Shelby M. Coffey </h1>
+  <h1 style="color:purple;font-size:50px"> Shelby M. Coffey </h1>
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
 <a href= "https://ShelbyCoffey.com" target= "_blank"> ShelbyCoffey.com </a>
  
- <h2> WORK EXPERIENCE </h2>
+ <h2 style="color:purple"> WORK EXPERIENCE </h2>
   <ul>
     <li>Caribou Coffee, Eagan, MN  Shift Supervisor
 2013 - PRESENT</li>
@@ -23,7 +23,7 @@ January 2015 - September 2015</li>
 May 2013 - September 2013</li>
 </ul>
 
- <h2> EDUCATION </h2>
+ <h2 style="color:purple"> EDUCATION </h2>
 
  <ul>
     <li> <h3>School of Visual Arts, New York City — Fine Arts</h3>
@@ -34,13 +34,13 @@ One semester studying Fine Arts with a concentration in Painting/drawing.
 August 2015 - Present
 Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Design in progress.</li>
 </ul>
- <h2>VOLUNTEER POSITIONS</h2
+ <h2 style="color:purple">VOLUNTEER POSITIONS</h2
 <ul>
   <li><h3>Minnesota Destination Imagination, Plymouth, MN — Secretary of the Board</h3>
 2012-Present</li>
  </ul>
   
-  <h2> AWARDS </h2> 
+  <h2 style="color:purple"> AWARDS </h2> 
  
   <ul> 
     <li> <h3>Distinguished Leader Award Awarded by Minnesota Destination</h3></li>
