--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <title>Shelby M. Coffey</title>
  </head>
-<body>
+<body style="background-color:grey;">
   <h1 style="color:purple;font-size:50px;font-family:Caflisch Script"> Shelby M. Coffey </h1>
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
