--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ One semester studying Fine Arts with a concentration in Painting/drawing.
 August 2015 - Present
 Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Design in progress.</li>
 </ul>
- <h2 style="color:purple">VOLUNTEER POSITIONS</h2
+ <h2 style="color:purple">VOLUNTEER POSITIONS</h2>
 <ul>
   <li><h3>Minnesota Destination Imagination, Plymouth, MN — Secretary of the Board</h3>
 2012-Present</li>
