--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Shelby M. Coffey</title>
  </head>
 <body style="background-color:grey;text-align:center">
-  <h1 style="color:purple;font-size:70px;font-family:Cursive;"> Shelby M. Coffey </h1>
- <p style= "text-align:right"><img src="https://lh3.google.com/u/0/d/0BzMo6lTxK1BAeFBSTVkxWjNQTzQ=w2456-h1224-iv1" /></p>
+  <h1 style="color:purple;font-size:70px;font-family:Cursive;"> Shelby M. Coffey <img style=" text-align:right"><src="https://lh3.google.com/u/0/d/0BzMo6lTxK1BAeFBSTVkxWjNQTzQ=w2456-h1224-iv1" /></h1>
+ <img src="https://lh3.google.com/u/0/d/0BzMo6lTxK1BAeFBSTVkxWjNQTzQ=w2456-h1224-iv1" />
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
 <a href= "https://ShelbyCoffey.com" target= "_blank"> ShelbyCoffey.com </a>
