--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
-<a href= "https://ShelbyCoffey.com"><img src="https://lh3.google.com/u/0/d/0BzMo6lTxK1BAeFBSTVkxWjNQTzQ=w2456-h1224-iv1"/> </a>
+<a href= "https://ShelbyCoffey.com">Shelby's Website</a>
  
  <h2 style="color:purple"> WORK EXPERIENCE </h2>
   <ul>
