--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <title>Shelby M. Coffey</title>
  </head>
 <body style="background-color:grey;text-align:center">
-  <h1 style="color:purple;font-size:70px;font-family:Cursive;"> Shelby M. Coffey </h1>
- 
+  <table border="1px">
+ <tr>
+ <td style="color:purple;font-size:70px;font-family:Cursive;"> Shelby M. Coffey <td>
+ </tr>
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
-<a href= "https://ShelbyCoffey.com">Shelby's Website</a>
+<a href= "https://ShelbyCoffey.com">ShelbyXCoffey.com</a>
  
  <h2 style="color:purple"> WORK EXPERIENCE </h2>
   <ul>
