--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <title>Shelby M. Coffey</title>
  </head>
 <body style="background-color:grey;text-align:center">
-  <table border="1px">
- <tr>
- <td style="color:purple;font-size:70px;font-family:Cursive;"> Shelby M. Coffey <td>
- </tr>
+  
+ <h1> style="color:purple;font-size:70px;font-family:Cursive;"> Shelby M. Coffey </h1>
+ 
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
 <a href= "https://ShelbyCoffey.com">ShelbyXCoffey.com</a>
