--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
-<a href= "https://ShelbyCoffey.com">ShelbyXCoffey.com</a>
+<a href= "https://ShelbyCoffey.com">ShelbyCoffey.com</a>
  
  <h2 style="color:purple"> WORK EXPERIENCE </h2>
   <ul>
