--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Desig
  
   <link rel="stylesheet" href="stylesheet.css"/> 
   
-  
+ <img src="http://cdn3-www.dogtime.com/assets/uploads/2011/01/file_23192_pembroke-welsh-corgi.jpg"/>
  
 </body> 
 </html>
