--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <a href= "https://ShelbyCoffey.com">ShelbyCoffey.com</a>
  
- <h2 style="color:purple"> WORK EXPERIENCE </h2>
+ <h2 style="color:#4B0082"> WORK EXPERIENCE </h2>
   <ul>
     <li>Caribou Coffee, Eagan, MN  Shift Supervisor
 2013 - PRESENT</li>
@@ -25,7 +25,7 @@ January 2015 - September 2015</li>
 May 2013 - September 2013</li>
 </ul>
 
- <h2 style="color:purple"> EDUCATION </h2>
+ <h2 style="color:#4B0082"> EDUCATION </h2>
 
  <ul>
     <li> <h3>School of Visual Arts, New York City — Fine Arts</h3>
@@ -36,13 +36,13 @@ One semester studying Fine Arts with a concentration in Painting/drawing.
 August 2015 - Present
 Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Design in progress.</li>
 </ul>
- <h2 style="color:purple">VOLUNTEER POSITIONS</h2>
+ <h2 style="color:#4B0082">VOLUNTEER POSITIONS</h2>
 <ul>
   <li><h3>Minnesota Destination Imagination, Plymouth, MN — Secretary of the Board</h3>
 2012-Present</li>
  </ul>
   
-  <h2 style="color:purple"> AWARDS </h2> 
+  <h2 style="color:#4B0082"> AWARDS </h2> 
  
   <ul> 
     <li> <h3>Distinguished Leader Award Awarded by Minnesota Destination</h3></li>
