--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
 <body style="background-color:grey;text-align:center">
   
- <h1 style="color:purple;font-size:70px;font-family:Cursive;"> Shelby M. Coffey </h1>
+ <h1 style="color:#4B0082;font-size:70px;font-family:Cursive;"> Shelby M. Coffey </h1>
  
   <h3> 3154 69th St. E. Inver Grove, MN 55076 (651)-280-5449 ShelbyMarieCoffey13@gmail.com </h3>
 
@@ -52,7 +52,6 @@ Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Desig
  
   <link rel="stylesheet" href="stylesheet.css"/> 
   
- <img src="http://cdn3-www.dogtime.com/assets/uploads/2011/01/file_23192_pembroke-welsh-corgi.jpg"/>
  
 </body> 
 </html>
