--- a/index.html
+++ b/index.html
@@ -12,43 +12,40 @@
 <a href= "https://ShelbyCoffey.com">ShelbyCoffey.com</a>
  
  <h2 style="color:#4B0082"> WORK EXPERIENCE </h2>
-  <ul>
-    <li>Caribou Coffee, Eagan, MN  Shift Supervisor
-2013 - PRESENT</li>
-    <li>Minnesota Destination Imagination, Plymouth, MN  State Challenge Master
-December 2015 -Present</li>
-    <li>Minnesota Destination Imagination, Plymouth, MN  Improv Trainer
-May 2012 -Present</li>
-    <li>DSW, Bloomington, MN  Sales Associate
-January 2015 - September 2015</li>
-    <li>Color Me Mine, Eagan, MN  Sales Associate/ Traveling Sales Associate
-May 2013 - September 2013</li>
-</ul>
+  
+    <p>Caribou Coffee, Eagan, MN  Shift Supervisor
+2013 - PRESENT</p>
+    <p>Minnesota Destination Imagination, Plymouth, MN  State Challenge Master
+December 2015 -Present</p>
+    <p>Minnesota Destination Imagination, Plymouth, MN  Improv Trainer
+May 2012 -Present</p>
+    <p>DSW, Bloomington, MN  Sales Associate
+January 2015 - September 2015</p>
+    <p>Color Me Mine, Eagan, MN  Sales Associate/ Traveling Sales Associate
+May 2013 - September 2013</p>
 
  <h2 style="color:#4B0082"> EDUCATION </h2>
 
- <ul>
-    <li> <h3>School of Visual Arts, New York City — Fine Arts</h3>
+
+    <p> <h3>School of Visual Arts, New York City — Fine Arts</h3>
 August 2014 - December 2014
 One semester studying Fine Arts with a concentration in Painting/drawing.
-   </li>
-   <li> <h3>Minneapolis College of Art and Design, Minneapolis, MN — Fine arts and Furniture Design</h3>
+   </p>
+   <p> <h3>Minneapolis College of Art and Design, Minneapolis, MN — Fine arts and Furniture Design</h3>
 August 2015 - Present
-Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Design in progress.</li>
-</ul>
+Studying Fine Arts with a concentration in Furniture Design. BFA Furniture Design in progress.</p>
+
  <h2 style="color:#4B0082">VOLUNTEER POSITIONS</h2>
-<ul>
-  <li><h3>Minnesota Destination Imagination, Plymouth, MN — Secretary of the Board</h3>
-2012-Present</li>
- </ul>
+
+  <p><h3>Minnesota Destination Imagination, Plymouth, MN — Secretary of the Board</h3>
+2012-Present</p>
+
   
   <h2 style="color:#4B0082"> AWARDS </h2> 
  
-  <ul> 
-    <li> <h3>Distinguished Leader Award Awarded by Minnesota Destination</h3></li>
-    <li><h3>Spirit of D.I. Award</h3>
-  Awarded by Minnesota Destination Imagination for extraordinary commitment to the program.</li>
-  </ul>
+    <p> <h3>Distinguished Leader Award Awarded by Minnesota Destination</h3></p>
+    <p><h3>Spirit of D.I. Award</h3>
+  Awarded by Minnesota Destination Imagination for extraordinary commitment to the program.</p>
  
   <link rel="stylesheet" href="stylesheet.css"/> 
   
