--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
  
  <h2 style="color:#4B0082"> WORK EXPERIENCE </h2>
   
-    <p><h3>Caribou Coffee, Eagan, MN  Shift Supervisor
-2013 - PRESENT</h3></p>
-    <p><h3>Minnesota Destination Imagination, Plymouth, MN  State Challenge Master
-December 2015 -Present</h3></p>
-    <p><h3>Minnesota Destination Imagination, Plymouth, MN  Improv Trainer
-May 2012 -Present</h3></p>
-    <p><h3>DSW, Bloomington, MN  Sales Associate
-January 2015 - September 2015</h3></p>
-    <p><h3>Color Me Mine, Eagan, MN  Sales Associate/ Traveling Sales Associate
-May 2013 - September 2013</h3></p>
+ <p><h3>Caribou Coffee,</h3><h4>Eagan, MN - Shift Supervisor</h4></p>
+<p>2013 - PRESENT</p>
+    <p><h3>Minnesota Destination Imagination,</h3><h4> Plymouth, MN - State Challenge Master</h4>
+<p>December 2015 -Present</p>
+ <p><h3>Minnesota Destination Imagination,</h3><h4> Plymouth, MN  Improv Trainer</h4></p>
+<p>May 2012 -Present</p>
+<p><h3>DSW,</h3><h4> Bloomington, MN - Sales Associate</h4></p>
+<p>January 2015 - September 2015</p>
+<p><h3>Color Me Mine,</h3><h4> Eagan, MN - Sales Associate/ Traveling Sales Associate</h4></p>
+<p>May 2013 - September 2013</p>
 
  <h2 style="color:#4B0082"> EDUCATION </h2>
 
