--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
  <h2 style="color:#4B0082"> WORK EXPERIENCE </h2>
   
- <p><h3>Caribou Coffee,</h3><h4>Eagan, MN - Shift Supervisor</h4></p>
+ <p><h3>Caribou Coffee,</h3>Eagan, MN - Shift Supervisor</p>
 <p>2013 - PRESENT</p>
     <p><h3>Minnesota Destination Imagination,</h3><h4> Plymouth, MN - State Challenge Master</h4>
 <p>December 2015 -Present</p>
