--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   
  <p><h3>Caribou Coffee,</h3>Eagan, MN - Shift Supervisor</p>
 <p>2013 - PRESENT</p>
-    <p><h3>Minnesota Destination Imagination,</h3><h4> Plymouth, MN - State Challenge Master</h4>
+    <p><h3>Minnesota Destination Imagination,</h3> Plymouth, MN - State Challenge Master</p>
 <p>December 2015 -Present</p>
- <p><h3>Minnesota Destination Imagination,</h3><h4> Plymouth, MN  Improv Trainer</h4></p>
+ <p><h3>Minnesota Destination Imagination,</h3> Plymouth, MN  Improv Trainer</p>
 <p>May 2012 -Present</p>
-<p><h3>DSW,</h3><h4> Bloomington, MN - Sales Associate</h4></p>
+<p><h3>DSW,</h3> Bloomington, MN - Sales Associate</p>
 <p>January 2015 - September 2015</p>
-<p><h3>Color Me Mine,</h3><h4> Eagan, MN - Sales Associate/ Traveling Sales Associate</h4></p>
+<p><h3>Color Me Mine,</h3> Eagan, MN - Sales Associate/ Traveling Sales Associate</p>
 <p>May 2013 - September 2013</p>
 
  <h2 style="color:#4B0082"> EDUCATION </h2>
