--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <title>Shelby M. Coffey</title>
  </head>
-<body style="background-color:grey;text-align:center">
+<body style="color:black;background-color:grey;text-align:center">
   
  <h1 style="color:#4B0082;font-size:70px;font-family:Cursive;"> Shelby M. Coffey </h1>
  
