--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
  <h2 style="color:#4B0082"> WORK EXPERIENCE </h2>
   
  <p><h3>Caribou Coffee,</h3>Eagan, MN - Shift Supervisor</p>
-<p>2013 - PRESENT</p>
+<p style="color:black">2013 - PRESENT</p>
     <p><h3>Minnesota Destination Imagination,</h3> Plymouth, MN - State Challenge Master</p>
-<p>December 2015 -Present</p>
+<p style="color:black">December 2015 -Present</p>
  <p><h3>Minnesota Destination Imagination,</h3> Plymouth, MN  Improv Trainer</p>
-<p>May 2012 -Present</p>
+<p style="color:black">May 2012 -Present</p>
 <p><h3>DSW,</h3> Bloomington, MN - Sales Associate</p>
-<p>January 2015 - September 2015</p>
+<p style="color:black">January 2015 - September 2015</p>
 <p><h3>Color Me Mine,</h3> Eagan, MN - Sales Associate/ Traveling Sales Associate</p>
-<p>May 2013 - September 2013</p>
+<p style="color:black">May 2013 - September 2013</p>
 
  <h2 style="color:#4B0082"> EDUCATION </h2>
 
