--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
  
  <h2 style="color:#4B0082"> WORK EXPERIENCE </h2>
   
- <p><h3>Caribou Coffee,</h3>Eagan, MN - Shift Supervisor</p>
-<p style="color:black">2013 - PRESENT</p>
-    <p><h3>Minnesota Destination Imagination,</h3> Plymouth, MN - State Challenge Master</p>
-<p style="color:black">December 2015 -Present</p>
- <p><h3>Minnesota Destination Imagination,</h3> Plymouth, MN  Improv Trainer</p>
-<p style="color:black">May 2012 -Present</p>
-<p><h3>DSW,</h3> Bloomington, MN - Sales Associate</p>
-<p style="color:black">January 2015 - September 2015</p>
-<p><h3>Color Me Mine,</h3> Eagan, MN - Sales Associate/ Traveling Sales Associate</p>
-<p style="color:black">May 2013 - September 2013</p>
+ <p><h3>Caribou Coffee,Eagan, MN - Shift Supervisor</h3> 2013 - PRESENT</p>
+ <p><h3>Minnesota Destination Imagination, Plymouth, MN - State Challenge Master</h3> December 2015 -Present</p>
+<p><h3>Minnesota Destination Imagination, Plymouth, MN - Improv Trainer</h3>May 2012 -Present</p>
+<p><h3>DSW, Bloomington, MN - Sales Associate</h3> January 2015 - September 2015</p>
+<p><h3>Color Me Mine, Eagan, MN - Sales Associate/ Traveling Sales Associate </h3>
+May 2013 - September 2013</p>
 
  <h2 style="color:#4B0082"> EDUCATION </h2>
 
